# MyProjects

./: .gitmodules  README.md
Economic_Models/: README.md
Economic_Models/Chapter10/: plotter.py
Economic_Models/Chapter3/: 3.3.py  interestplt.py  nmpyprac.py  scipyprac.py  test.py  time_series_plt.py  whitenoisegen.py
Economic_Models/Chapter6/: 6.1.py  test.py
Economic_Models/Chapter8/: chaos.py
Economic_Models/Chapter9/: sin_wave.py
Economic_Models/Misc-Economic-Models/: README.md
Economic_Models/Multi_Agent_Market_Simulation/: README.md  main.cpp  makefile
Economic_Models/my_biggest_bet/: .gitignore  CMakeLists.txt  exchange.cpp  exchange.h  industry.cpp  industry.h  main.cpp  makefile  stock.cpp  stock.h  trader.h
Economic_Models/my_biggest_bet/project/: project_plan
Economic_Models/my_biggest_bet/src/: pybinder.cpp
Economic_Models/my_biggest_bet/trader_algos/: py_binder.h  python_trader.py  strategies.py  trader_algos.h
Economic_Models/my_biggest_bet/utils/: exchange.cpp  exchange.h  industry.cpp  industry.h  market_dataframe.h  stock.cpp  stock_frame.h  stock_frame_linked_list.cpp  stock_frame_linked_list.h  trade_message.cpp  trade_message.h
FuzzyLogic/: Fuzzy_Set_def.c  fuzzy
Light1/LightYears/: CmakeLists.txt
LightYears/: CmakeLists.txt  clusters.c  game_of_life.c  makefile
LinkedInAutoConnect/: linkedInAutoConnect.py
Particle_Simulator/: 6thTestProgram.c  cluster_utils.c  cluster_utils.h  clusters.c  game_of_life.c  makefile
Particle_Simulator/Clusters/: README.md  cluster_utils.h  clusters  clusters.c  makefile
QuantPrac/: whitenoisegen.py
QuantPrac/Chapter3/: time_series_plt2.py
QuantPrac/Chapter4/: 4.1.py  4.3.py
QuantPrac/Chapter5/: 5.3.py
QuantPrac/Chapter7/: market.py
coding_practice/html_practice/: feedback.html  ismail_style.css  video_compilation_page.html
cpp_practice/: 1.4_var_assgn.cpp  a.out  main.cpp  myProgram  uninit_val  uninit_val.cpp  verion_checker.cpp  version_check
cpp_projects/: Casino_Game.cpp
html_practice/: cat_blog_page.html  event_hub.html  ismails_website.html
spinning_heart/: main  main.c
viruses/: fork_bomb  fork_bomb.c
(+57 files in other folders)
